<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_name"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title_atributions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_attributions"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_atributions"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title_addres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_address"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_addres"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_phone"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_phone"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_url"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_url"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>